--- a/blog/2022-08-21/1. turborepo_with_pnpm.mdx
+++ b/blog/2022-08-21/1. turborepo_with_pnpm.mdx
@@ -21,8 +21,9 @@ tags: [pnpm, turborepo, monorepo]
 ### pnpm
 
 - 이전 글에서 읽었던 pnpm의 장점과 추가로
-  - 빠르고 겹치는 node 패키지들을 hardlink, symlink를 이용하여 해결하기 때문에 용량 관리 가능!
-- yarn berry 보다 아직 까진 상대적으로 migration에 대한 위험성이 낮음 -> node_modules를 사용하는건 여전히 똑같으니, 은근 pnp가 아직 까지 문제를 많이 일으킴
+  - 일단 빠르고 겹치는 node 패키지들을 hardlink, symlink를 이용하여 해결하기 때문에 용량 관리 가능!
+  - node_modules가 hoisting 되지 않아 유령 의존성 해결 - 옵션으로 hoisting 가능
+- yarn berry 보다 아직 까진 상대적으로 migration에 대한 위험성이 낮음 -> node_modules를 사용하는건 여전히 똑같으니, 은근 pnp 기능이 아직 까지 문제를 많이 일으킴
 
 ### turborepo
 
