--- a/blog/2022-08-21/1. turborepo_with_pnpm.mdx
+++ b/blog/2022-08-21/1. turborepo_with_pnpm.mdx
@@ -53,3 +53,13 @@ tags: [pnpm, turborepo, monorepo]
 
 무의미한 초기 설정법은 링크로 대체한다!
 [turborepo 공식문서](https://turborepo.org)
+
+## 참조
+
+---
+
+[Monorepo with Turborepo - vercel](https://vercel.com/templates/next.js/monorepo)
+
+[Turborepo로 모노레포 개발 경험 향상하기 - LINE Engineering](https://engineering.linecorp.com/ko/blog/monorepo-with-turborepo)
+
+[모던 프론트엔드 프로젝트 구성기법 - NAVER D2](https://d2.naver.com/helloworld/7553804)
