--- a/blog/2022-08-21/1. turborepo_with_pnpm.mdx
+++ b/blog/2022-08-21/1. turborepo_with_pnpm.mdx
@@ -63,3 +63,5 @@ tags: [pnpm, turborepo, monorepo]
 [Turborepo로 모노레포 개발 경험 향상하기 - LINE Engineering](https://engineering.linecorp.com/ko/blog/monorepo-with-turborepo)
 
 [모던 프론트엔드 프로젝트 구성기법 - NAVER D2](https://d2.naver.com/helloworld/7553804)
+
+[Managing a full-stack, multipackage monorepo using pnpm - LogRocket](https://blog.logrocket.com/managing-full-stack-monorepo-pnpm/)
