--- a/blog/2022-07-22/1.리액트 평문노출.mdx
+++ b/blog/2022-07-22/1.리액트 평문노출.mdx
@@ -1,15 +1,17 @@
 ---
-title: 리액트기반 배포 서비스의 평문 노출
+title: 리액트 기반 배포된 서비스의 난독화 되지않은 소스코드 노출에 대한 고찰
 slug: react_human_readable_code
 authors: khanne
 tags: [pnpm, yarn]
 ---
 
+~~제목 꼰스러운거 실화냐?~ 글쓴이 정신 차리자~ ~~
+
 ## ⚽️ 목표
 
 ---
 
-:::info 모바일 소스코드 평문노출은 취약점이면서 왜 프론트 코드는 평문노출이 아닐까?
+:::info 모바일 소스코드 난독화 미수행이 취약점이면서 왜 웹 프론트에 대해서는 법적인 강제사항이 없을까?
 :::
 
 <!--truncate-->
@@ -18,13 +20,9 @@ tags: [pnpm, yarn]
 
 ---
 
-> 법적 강제성은 애매하지만 간단한 설정으로 막을 수 있으므로 제거 추천
+> 법적 강제성은 애매하지만 간단한 설정으로 평문(개발 시 작성한 humand readable 코드)으로 노출되므로 제거
 
 ~~코드작성 시 가독성, 재사용성 전부다 때려친 손난독화를한 코드면...Human Readable 코드라 해도 의미없는건 매한가지긴 하지만...~~
-
-### 평문 노출?
-
-정확히 말하자면 `평문노출` 이라기보단 Uglify되지 않은 코드 노출이라 보는게 맞지만 주요정보통신기반시설 || 전자금융기반시설 취약점 진단기준에 매핑해서 보기엔.... 평문 노출이 더가까워서 일단! 해당 문서에선 평문노출이라 부를 예정입니다.
 
 ## 1. 왜?
 
@@ -42,7 +40,7 @@ tags: [pnpm, yarn]
 ![배포된 서비스에서 확인 가능한 human readable 소스코드](https://iwannaberealnerd.notion.site/image/https%3A%2F%2Fs3-us-west-2.amazonaws.com%2Fsecure.notion-static.com%2Ff8ecadbb-703e-4cea-b312-20cc7f604241%2F%25E1%2584%2589%25E1%2585%25A9%25E1%2584%2589%25E1%2585%25B3%25E1%2584%258F%25E1%2585%25A9%25E1%2584%2583%25E1%2585%25B3%25E1%2584%2582%25E1%2585%25A9%25E1%2584%258E%25E1%2585%25AE%25E1%2586%25AF.png?table=block&id=f8efbe43-0049-4306-9ee8-87f3c7b02c4a&spaceId=35999598-bd0e-4e04-a70a-5396c69f115f&width=2000&userId=&cache=v2)
 
 - (설정에 따라 다름)소스맵 파일을 제거하지 않을 경우 배포 후 개발자 도구 이용 시 소스코드가 Human Readable 상태로 노출됨
-- 웹팩으로 번들링 하기 전 코드 또한 확인 가능 -> 컴포넌트 단위로 디렉터리 구조 또한 나뉘어져 있음
+- 웹팩과 같은 번들러로 번들링 되기 전 코드 상태로 확인 가능 -> 디렉터리 구조 또한 개발 당시 상황으로 나뉘어져 있음
 
 ### 소스맵 파일이 존재하지 않을 시
 
@@ -51,20 +49,7 @@ tags: [pnpm, yarn]
 - 소스맵 파일이 존재하여 완전 Human Readable 코드보다 상대적으로 코드 파악 및 분석이 어려움
 - 디렉터리, 파일 구조 또한 번들링된 상태로 노출되어 코드 분석 및 파악이 더 어려움
 
-## 3. 법적 강제성
-
----
-
-### 주요정보통신기반시설 기준
-
-- 매핑되는 취약점 없음
-
-### 전자금융기반시설 기준
-
-- `웹` - 매핑되는 취약점 없음
-- `모바일` - 하이브리드 앱의 경우 `소스코드 난독화 적용 여부` 매핑 가능
-
-## 4. 나눠지는 의견들
+## 3. 나눠지는 의견들
 
 ---
 
@@ -82,37 +67,43 @@ tags: [pnpm, yarn]
 - 모든 대응의 기준을 법적으로 따지기엔 너무 소극적인 태도이다, 법적 기준에는 최신 기술들의 적용이 항상 늦다, 유연하게 대응해야 한다. ex)주요정보통신기반시설 웹 진단기준에는 아직도 `포멧스트링, 자동화 공격과 같은 취약점들이 존재`한다
 - 간단한 설정으로 내부 코드 유출 + 잠재적 위험 요소를 제거 할 수 있는 바겐 세일이 있는데... 이걸 안해?
 
-## 5. 작성자의 의견
+## 4. 작성자의 의견
 
 ---
 
-> "모바일에 난독화가 안되어있는 코드면 다들 취약점이라고 난리인데... 모바일 보다 더 쉽게 접근 및 분석 가능한 웹에서 소스코드 난독화가 안이루어져 있는데... 이걸 왜 안잡아?"
+:::note "모바일에 난독화가 안되어있는 코드면 다들 취약점이라고 난리인데... 모바일 보다 더 쉽게 접근 및 분석 가능한 웹에서 소스코드 난독화가 안이루어져 있는데... 이걸 왜 안잡아?"
+:::
 
-- 모바일 애플리케이션 만큼의 권한은 아니지만 비슷할 정도로 권한을 가지고 있는 모던 브라우저 -> 비슷한 위험성을 가지고 있습니다.
-- 보안은 무조건 백엔드지! 무슨 클라이언트 단 보안이야! 라는 소극적인 입장만으로는 다계층 보안을 구현하기 어렵습니다.
+- 모바일 애플리케이션 만큼의 권한은 아니지만 비슷할 정도로 권한을 가지고 있는 모던 브라우저 -> 비슷했으면 비슷했지 상대적으로 모자라지 않은 위험성을 가지고 있음
+- 보안은 무조건 백엔드지! 무슨 클라이언트 단 보안이야! 또는 법적근거가 아니다! 와 같은 소극적인 자세로는 [다계층 보안](https://www.ibm.com/docs/en/i/7.3?topic=security-layered-defense-approach)을 구현하기 어려움
 
-### 프로세스 차이
+### 모바일 애플리케이션 exploit 프로세스
 
 - 소스코드 난독화가 이루어져 있지 않은 웹/모바일 애플리케이션의 프로세스 복잡도 차이
 - 모바일 애플리케이션은 훨씬더 많은 필요 조건이 동반되어야 함
-  - 모바일 애플리케이션 소스코드 분석 프로세스
-    1. 앱다운로드
-    2. 모바일 기기와 PC 연결
-    3. 앱 추출
-    4. IDA나 JEB에로 분석
-    5. (추가) FRIDA와 같은 툴이 존재해야 동적 디버깅
-       (소스코드 직접 패치는... 쫌..)
-       (기기의 루팅이나 탈옥이 선행되지 않을 경우 그마저 힘듬)
-  - 웹 소스코드 분석 / 변조 프로세스 → 단 두개의 프로세스!
-    1. 웹페이지 접속
-    2. 개발자 도구 켜기 (개발자 도구에서 소스코드 변조 및 동적 디버깅 가능)
 
-### 치트키
+1. 앱다운로드
+2. 모바일 기기와 PC 연결
+3. 앱 추출
+4. IDA나 JEB에로 분석
+5. (추가) FRIDA와 같은 툴이 존재해야 동적 디버깅
+   (소스코드 직접 패치는... 쫌..)
+   (기기의 루팅이나 탈옥이 선행되지 않을 경우 그마저 힘듬)
 
-> 웹팩 공식 문서에서 일반 이용자에게 전체 소스맵을 제공하지 말라했다구우우웃!
+### 웹 애플리케이션 exploit 프로세스
+
+- 변조 프로세스 → 단 두개의 프로세스!
+
+1. 웹페이지 접속
+2. 개발자 도구 켜기 (개발자 도구에서 소스코드 변조 및 동적 디버깅 가능)
 
 ## 결론
 
 ---
 
-> "노출되면 안된다!"에 대한 법적 근거는 없지만 충분히 위험성을 가지고 있으며 대응이 어렵지 않은 취약점이므로 운영상에 문제가 되지 않으면 소스맵 파일을 제거하자!
+- "노출되면 안된다!"에 대한 법적 근거는 없지만 모바일 애플리케이션의 취약점 리스트에 존재하는 `소스코드 난독화 여부`와 비슷한 취약점
+- 오히려 모바일보다 쉽게 소스코드 접근 및 변조가 가능한 웹 애플리케이션인데... 이게 왜 취약점이 아닌지 궁금할 정도
+
+### 치트키
+
+- [webpack 공식 문서](https://webpack.kr/configuration/devtool/#root)에서 일반 이용자에게 전체 소스맵을 제공하지 말라했다구우우웃!
