[Content] pnpm deeper 게시글 추가

--- a/blog/2022-07-24/1.pnpm_yarn.mdx
+++ b/blog/2022-07-24/1.pnpm_yarn.mdx
@@ -2,7 +2,7 @@
 title: pnpm vs yarn-berry
 slug: pnpm_vs_yarn-berry
 authors: khanne
-tags: [pnpm, yarn]
+tags: [pnpm, yarn, npm]
 ---
 
 ## ⚽️ 목표
@@ -140,9 +140,9 @@ libName
 
 :::info PNPM으로 가즈아~
 
-### yarn berry 왜안했어?
+### yarn berry 왜 안했어?
 
 - 아직 지원하지 않는 라이브러리(PnP, ZeroInstall) 때문에 아직까지 호환성 이슈가 존재(VSC... VSC... VSC, Storybook)
 - 프로젝트에서 이주 시도 시 직접 마주친 문제만 5개정도 - 그에 반해 pnpm은 사소한 이슈 1개 정도?
 - Zero Install의 필요성을 잘느끼지 못했음 -> 오히려 pnpm의 content-addressable storage가 더 매력적으로 느껴졌음
-- pnp는 pnpm에도 존재함
+- pnp는 pnpm에서도 옵션으로 활성화 가능함
