--- a/blog/2022-08-10/1. pnpm_deeper.mdx
+++ b/blog/2022-08-10/1. pnpm_deeper.mdx
@@ -19,7 +19,49 @@ tags: [pnpm, symlink]
 
 ### 한마디로
 
-> symlink, hardlink를 이용하여 효율적인 디스크 공간 관리 및 속도를 중요시 하는 패키지 관리자
+> symlink, hardlink를 이용하여 효율적인 디스크 공간 관리 및 속도를 중요시 하는 패키지 관리자 ~~제일 합리적여~~
+
+## pnpm 이해에 필요한 기본지식
+
+### content-addressable store
+
+> 이하 CSA로 통일
+
+```bash
+pnpm store path # ~/pnpm/store/v3 - pnpm 설치 방법마다 다름
+```
+
+![](https://iwannaberealnerd.notion.site/image/https%3A%2F%2Fs3-us-west-2.amazonaws.com%2Fsecure.notion-static.com%2F2781d7bb-0ca3-411b-9a76-19657b265c71%2FScreen_Shot_2022-09-18_at_11.22.55_PM.png?table=block&id=0b7f395b-8c58-4132-8109-42fbdefc7ec2&spaceId=35999598-bd0e-4e04-a70a-5396c69f115f&width=1510&userId=&cache=v2)
+
+- 간단히 설명하면 `패키지 파일 중앙 저장 관리소`
+- node_modules의 무거운 패키지 지옥을 해결하는 방법
+- `npm`, `yarn`` -100개의 프로젝트에 30개의 동일한 버전의 라이브러리가 있음, 동일한 버전임에도 불구하고 30개의 복사본이 존재하여 디스크 저장공간을 낭비함
+- `pnpm` - pnpm의 CAS에 실제 파일들이 저장되고 프로젝트에서 사용하고자 할때는 CAS에 저장된 파일들을 hardlink해 사용하기 때문에 설치 속도(file io가 없기 때문) 및 디스크 저장공간의 효율적인 관리가 가능함
+
+### inode
+
+```bash
+ls -i # 138232 node_modules
+```
+
+- index-node의 줄임말
+- 파일 시스템에 `주민등록번호` -> 파일 시스템 내에 파일, 디렉터리들은 고유한 inode 값을 가지고 있음
+- symlink(softlink 라고도 부름, 이하 symlink로 통일)로 연결된 파일은 같은 파일을 바라보고 있다 해도 서로 다른 symlink를 가지고 있음
+
+### hardlink
+
+- 2개 이상의 파일들이 하나의 inode를 직접 참조하는 것
+- A(원본) 파일이 삭제되더라도 A를 hardlink한 B 파일은 여전히 존재 및 참조 가능
+- 보조기억장치에 저장된 파일 접근 시 inode를 활용하여 직접 접근하므로 symlink보다 성능이 비교적 좋음
+- 디렉터리 hardlink 불가
+- 파일들이 하드링크된 파일은 용량을
+
+### symlink
+
+- 2개 이상의 파일들이 존재할 때 바로가기와 비슷한 형태로 하나의 파일을 참조하는 것
+- 윈도우의 바로가기와 비슷한 형태 -> 파일 참조 시 원본 파일을 경유하므로 hardlink에 비해 비교적 속도가 느림
+- A(원본) 파일이 삭제되되면 A를 symlink한 B파일은 참조 불가
+- 디렉터리 symlink 가능
 
 ## npm의 node_modules 구조
 
@@ -45,46 +87,6 @@ npm install react
 
 사용자의 컴퓨터 아키텍쳐에 따라 미리 컴파일된 바이너리 또는 실행가능한 파일이 존재하는 디렉터리, 해당 프로젝트 실행 시 필요한 실행파일들이 존재하는 디렉터리
 
-## pnpm 들어가기 앞서
-
-### content-addressable store
-
-> 이하 CSA로 통일
-
-```bash
-pnpm store path # ~/pnpm/store/v3 - pnpm 설치 방법마다 다름
-```
-
-![](https://iwannaberealnerd.notion.site/image/https%3A%2F%2Fs3-us-west-2.amazonaws.com%2Fsecure.notion-static.com%2F2781d7bb-0ca3-411b-9a76-19657b265c71%2FScreen_Shot_2022-09-18_at_11.22.55_PM.png?table=block&id=0b7f395b-8c58-4132-8109-42fbdefc7ec2&spaceId=35999598-bd0e-4e04-a70a-5396c69f115f&width=1510&userId=&cache=v2)
-
-- 간단히 설명하면 `패키지 파일 중앙 저장 관리소`
-- node_modules의 무거운 패키지 지옥을 해결하는 방법
-- `npm`, `yarn`` -100개의 프로젝트에 30개의 동일한 버전의 라이브러리가 있음, 동일한 버전임에도 불구하고 30개의 복사본이 존재하여 디스크 저장공간을 낭비함
-- `pnpm` - pnpm의 CAS에 실제 파일들이 저장되고 프로젝트에서 사용하고자 할때는 CAS에 저장된 파일들을 hardlink해 사용하기 때문에 설치 속도(file io가 없기 때문) 및 디스크 저장공간의 효율적인 관리가 가능함
-
-### inode
-
-```bash
-ls -i # 138232 node_modules
-```
-
-- index-node의 줄임말
-- 파일 시스템에 `주민등록번호` -> 파일 시스템 내에 파일, 디렉터리들은 고유한 inode값을 가지고 있음
-- symlink(softlink 라고도 부름, 이하 symlink로 통일)로 연결된 파일은 같은 파일을 바라보고 있다 해도 서로 다른 symlink를 가지고 있음
-
-### hardlink
-
-- 2개 이상의 파일들이 하나의 inode를 직접 참조하는 것
-- A(원본) 파일이 삭제되더라도 A를 hardlink한 B 파일은 여전히 존재 및 참조 가능
-- 보조기억장치에 저장된 파일 접근 시 inode를 활용하여 직접 접근하므로 symlink보다 성능이 비교적 좋음
-- 디렉터리와 디렉터리는 hardlink 불가 -> symlink는 가능
-
-### symlink
-
-- 2개 이상의 파일들이 존재할 때 바로가기와 비슷한 형태로 하나의 파일을 참조하는 것
-- 윈도우의 바로가기와 비슷한 형태 -> 파일 참조 시 원본 파일을 경유하므로 hardlink에 비해 비교적 속도가 느림
-- A(원본) 파일이 삭제되되면 A를 symlink한 B파일은 참조 불가
-
 ## pnpm의 node_modules 구조
 
 ```bash
@@ -105,11 +107,42 @@ ls -a # react, .modules.yaml, pnpm
 
 ```bash
 pwd # ~/pnpm1/node_modules/.pnpm
-ls -a # react, js-tokens@4.0.0, loose-envify@1.4.0, react@18.2.0, lock.yaml, node_modules
+ls -a # js-tokens@4.0.0, loose-envify@1.4.0, react@18.2.0, lock.yaml, node_modules
 ```
 
 - npm에서 호이스팅으로 평탄화된 디렉터리 구조 그대로 존재
-- 실제
+
+> 하드링크된 모든 파일들은 .pnpm 디렉터리에 존재
+
+```bash
+pwd # ~/pnpm1/node_modules
+ls -al
+# ...생략
+# lrwxr-xr-x  1 khannewayne  staff   37 Sep 17 10:54 react -> .pnpm/react@18.2.0/node_modules/react
+```
+
+- 하드링크된 파일들은 모두 .pnpm 디렉터리에 존재하고 node_modules 최상단에 존재하는 패키지 디렉터리는 **`.pnpm 내부로 symlink`** 되어있음
+
+### .pnpm과 CSA를 매핑 해보기
+
+```bash
+# .pnpm에 inode 확인
+pwd # ~/pnpm1/node_modules/.pnpm
+cd react@18.2.0/node_modules/react
+
+ls -ali index.js # 4303682 -rw-r--r--  35 khannewayne  staff  190 Aug 18 22:30 index.js
+
+# CSA위치 확인
+pnpm store path # ~/pnpm/store/v3 - pnpm 설치 방법마다 다름
+cd ~/pnpm/store/v3/files # CSA에 실제 패키지 파일들이 설치된 위치로 이동
+
+find . -inum 4303682 # ./25/412e88974b83582fa47ec907cb4d2a30b9027a19215609...
+```
+
+- react@18.2.0의 node_moduels에 react로 이동해 inode 확인
+- 확인한 inode 값을 CSA로 이동 후 find 명령어를 이용해 파일 검색 - HIT!
+- CSA에 실제로 존재하는 패키지 파일을 확인할 수 있음
+- .pnpm에 존재하는 모든 파일들은 CSA에서 중앙 관리 -> 프로젝트가 늘어나면 늘어날수록 더욱더 효율적인 패키지관리 가능!, 속도는 덤
 
 ## 참조
 
