[Content] 웹 표준의 중요성(퍼먹는 user-agent) 추가

--- a/blog/2022-07-24/1.pnpm_yarn.mdx
+++ b/blog/2022-07-24/1.pnpm_yarn.mdx
@@ -12,6 +12,8 @@ tags: [pnpm, yarn, npm]
 :::info `NPM` vs `Yarn Classic(v1)` vs `Yarn Berry(v2)` vs `PNPM`
 :::
 
+- 다른사람이 좋다길래~ 하고 yarn berry만 쓰지맙시다.
+
 <!--truncate-->
 
 - Yarn Classic과 Yarn Berry는 다르다는걸 인지하고 읽어보자.
@@ -145,4 +147,4 @@ libName
 - 아직 지원하지 않는 라이브러리(PnP, ZeroInstall) 때문에 아직까지 호환성 이슈가 존재(VSC... VSC... VSC, Storybook)
 - 프로젝트에서 이주 시도 시 직접 마주친 문제만 5개정도 - 그에 반해 pnpm은 사소한 이슈 1개 정도?
 - Zero Install의 필요성을 잘느끼지 못했음 -> 오히려 pnpm의 content-addressable storage가 더 매력적으로 느껴졌음
-- pnp는 pnpm에서도 옵션으로 활성화 가능함
+- pnp 기능은 pnpm에서도 옵션으로 활성화 가능함
