--- a/blog/2022-07-22/1.리액트 평문노출.mdx
+++ b/blog/2022-07-22/1.리액트 평문노출.mdx
@@ -5,14 +5,14 @@ authors: khanne
 tags: [pnpm, yarn]
 ---
 
-~~제목 꼰스러운거 실화냐?~ 글쓴이 정신 차리자~ ~~
-
 ## ⚽️ 목표
 
 ---
 
 :::info 모바일 소스코드 난독화 미수행이 취약점이면서 왜 웹 프론트에 대해서는 법적인 강제사항이 없을까?
 :::
+
+- 제목 꼰스러운거 실화냐?~~~ 글쓴이 정신 차리자
 
 <!--truncate-->
 
