[Fix] develog -> blog 로 통일

--- a/blog/2022-08-15/1. typescript_never.mdx
+++ b/blog/2022-08-15/1. typescript_never.mdx
@@ -13,6 +13,8 @@ tags: [typescript, type inference]
 
 > 함수 overloading을 이용해 좀 더 TypeSafe하고 유연한 함수를 만들어보자!
 
+<!--truncate-->
+
 ## 1. Overloading
 
 ---
