--- a/blog/2022-09-04/1. browser_war_zone.mdx
+++ b/blog/2022-09-04/1. browser_war_zone.mdx
@@ -134,6 +134,19 @@ Mozilla/5.0 (Windows NT 10.0; Win64; x64; ServiceUI 11) AppleWebKit/537.36 (KHTM
 - 1995년 부터 2013년 까진 자체 `presto` 엔진을 사용함
 - 현재는 `chromium` 기반
 
+## 재밌는 이야기(2023년 1월 15일 추가)
+
+[Mozilla changes Firefox's user agent because of Internet Explorer 11](https://www.ghacks.net/2023/01/01/mozilla-changes-firefoxs-user-agent-because-of-internet-explorer-11/)
+
+- 모던 웹에서는 "브라우저마다 다른 결과물 전달"은 웹 표준을 해치는 아주 위험한 생각이지만 위의 이야기를 봐왔듯이 이전 웹서비스에서는 흔한 일
+
+**Internet Explorer 11's user agent** - Mozilla/5.0 (Windows NT 6.1; WOW64; Trident/7.0; AS; rv:11.0) like Gecko
+
+**Firefox 110's user agent** - Mozilla/5.0 (Windows NT 6.1; WOW64; rv:110.0) Gecko/20100101 Firefox/11
+
+- 오래된 사이트들에서 최신 파이어 폭스의 **11**이란 글자를 보고 **"익스플로러 11 아냐?!??!"** 라고 생각하여 익스플로러 11에 최적화에된 사이트를 전달해주는 케이스가 발생
+- 다음 릴리즈 부터 11\* 을 넘기고 120으로 버전 변경할 예정 -> 나이틀리에서 발생한 문제
+
 ## 참조
 
 ---
