--- a/blog/2022-08-10/1. pnpm_deeper.mdx
+++ b/blog/2022-08-10/1. pnpm_deeper.mdx
@@ -36,7 +36,7 @@ pnpm store path # ~/pnpm/store/v3 - pnpm 설치 방법마다 다름
 
 - 간단히 설명하면 `패키지 파일 중앙 저장 관리소`
 - node_modules의 무거운 패키지 지옥을 해결하는 방법
-- `npm`, `yarn`` -100개의 프로젝트에 30개의 동일한 버전의 라이브러리가 있음, 동일한 버전임에도 불구하고 30개의 복사본이 존재하여 디스크 저장공간을 낭비함
+- `npm`, `yarn` -100개의 프로젝트에 30개의 동일한 버전의 라이브러리가 있음, 동일한 버전임에도 불구하고 30개의 복사본이 존재하여 디스크 저장공간을 낭비함
 - `pnpm` - pnpm의 CAS에 실제 파일들이 저장되고 프로젝트에서 사용하고자 할때는 CAS에 저장된 파일들을 hardlink해 사용하기 때문에 설치 속도(file io가 없기 때문) 및 디스크 저장공간의 효율적인 관리가 가능함
 
 ### inode
