--- a/blog/2022-08-10/1. pnpm_deeper.mdx
+++ b/blog/2022-08-10/1. pnpm_deeper.mdx
@@ -55,7 +55,7 @@ ls -i # 138232 node_modules
 - A(원본) 파일이 삭제되더라도 A를 hardlink한 B 파일은 여전히 존재 및 참조 가능
 - 보조기억장치에 저장된 파일 접근 시 inode를 활용하여 직접 접근하므로 symlink보다 성능이 비교적 좋음
 - 디렉터리 hardlink 불가
-- 파일들이 하드링크된 파일은 용량을
+- 파일들이 하드링크된 파일은 용량을 추가로 갖지 않고 원본파일 하나만 존재
 
 ### symlink
 
